@@ -5,17 +5,16 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /** Static utilities for conversion to/from Pojos. */
 public class ConvertPojos {
 
   @Nullable
   public static <T, U> List<U> convertList(@Nullable List<T> from, Function<T, U> converter) {
-    return from == null || from.isEmpty() ? null : from.stream().map(converter).collect(Collectors.toList());
+    return from == null || from.isEmpty() ? null : from.stream().map(converter).toList();
   }
 
   public static <T, U> List<U> convertCollection(@Nullable Collection<T> from, Function<T, U> converter) {
-    return from == null || from.isEmpty() ? new ArrayList<>() : from.stream().map(converter).collect(Collectors.toList());
+    return from == null || from.isEmpty() ? new ArrayList<>() : from.stream().map(converter).toList();
   }
 }
