@@ -9,7 +9,6 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.lang.reflect.Type;
 import java.nio.file.Path;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /** Static helper methods for writing serialized classes to json files. */
@@ -27,7 +26,7 @@ public class ConvertToJson {
   static void writeCoefficients(Iterable<AvailableGuardian> object, Path where) throws IOException {
     Coefficients coefs = new Coefficients(
             StreamSupport.stream(object.spliterator(), false)
-            .map(g -> g.lagrangeCoordinate()).collect(Collectors.toList()));
+            .map(g -> g.lagrangeCoordinate()).toList());
     try (FileWriter writer = new FileWriter(where.toFile())) {
       enhancedGson.toJson(coefs, Coefficients.class, writer);
     }
