@@ -20,7 +20,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Orchestrates the decryption of encrypted Tallies and Ballots.
@@ -202,9 +201,7 @@ public class DecryptingTrusteeMediator {
     }
 
     // Add the newly calculated shares
-    for (Map.Entry<String, DecryptionShare> entry : missing_tally_shares.entrySet()) {
-      this.tally_shares.put(entry.getKey(), entry.getValue());
-    }
+    this.tally_shares.putAll(missing_tally_shares);
   }
 
   /**
@@ -375,7 +372,8 @@ public class DecryptingTrusteeMediator {
     for (DecryptingTrusteeIF guardian : this.available_guardians.values()) {
       List<Integer> seq_orders = this.available_guardians.values().stream()
               .filter(g -> !g.id().equals(guardian.id()))
-              .map(g -> g.xCoordinate()).collect(Collectors.toList());
+              .map(g -> g.xCoordinate())
+              .toList();
       Group.ElementModQ coeff = ElectionPolynomial.compute_lagrange_coefficient(guardian.xCoordinate(), seq_orders);
       this.lagrange_coefficients.put(guardian.id(), coeff);
       this.guardianStates.add(new AvailableGuardian(guardian.id(), guardian.xCoordinate(), coeff));
